Stopped overflow issues in web-page

--- a/about.css
+++ b/about.css
@@ -1,23 +1,19 @@
 body{
     background-image: url("./assets/shared/desktop/bg-pattern-circle.svg");
     background-position: center top -550px;
-    /* background-size: 100%; */
     background-repeat: no-repeat;
-    /* background-color: #F2F2F2; */
-    /* background-color:  #F2F2F2; */
-    /* background-color: #f2f2f29b; */
     margin: 0;
     padding: 0;
     font-size: 15px;
     font-family: 'Public Sans', sans-serif;
     font-weight: 700;
+    overflow-x: hidden;
 
 }
 
 
 h1, h2, h3{
     font-family: 'DM Serif Display', serif;
-    /* font-weight: 400; */
 }
 
 body p{
@@ -104,8 +100,6 @@ img-container{
 .main-text{
     text-align: center;
     line-height: 28px;
-    /* width: 70%;
-    margin: auto; */
     padding: 2% 5%;
 }
 
@@ -189,13 +183,12 @@ aside{
 }
 
 footer{
-    /* margin: 10px; */
+
    background-color: #1B262F;
    padding: 0;
    display: flex;
    flex-direction: column;
    margin: 0;
-   /* padding-left: 1rem; */
    padding-right: 1rem;
    padding-top: 10%;
     
@@ -206,9 +199,6 @@ footer li{
 }
 
 
-/* footer ul{ */
-    /* list-style-type: ; */
-/* } */
 
  footer a{
   color:  #FBFCFE;
@@ -416,7 +406,6 @@ footer{
 .list-inline{
     flex-basis: 45%;
     justify-content: end;
-    /* padding-right: 50px; */
     
 }
    
