--- a/contact.css
+++ b/contact.css
@@ -1,22 +1,18 @@
 body{
     background-image: url("./assets/shared/desktop/bg-pattern-circle.svg");
     background-position: center top -550px;
-    /* background-size: 100%; */
     background-repeat: no-repeat;
-    /* background-color: #F2F2F2; */
-    /* background-color:  #F2F2F2; */
-    /* background-color: #f2f2f29b; */
     margin: 0;
     padding: 0;
     font-size: 15px;
     font-family: 'Public Sans', sans-serif;
     font-weight: 700;
     color: #36536B;
+    overflow-x: hidden;
 
 }
 
 body p{
-    /* color: #36536B; */
     font-weight: 400;
 }
 
@@ -98,9 +94,6 @@ form input :active{
     opacity: 0.5;
 }
 
-/* input :active{
-    color: #FF0000;
-} */
 
 .primary-btn{
     height: 48px;
@@ -212,13 +205,12 @@ main h2{
  
  
    footer{
-       /* margin: 10px; */
+
       background-color: #1B262F;
       padding: 0;
       display: flex;
       flex-direction: column;
       margin: 0;
-      /* padding-left: 1rem; */
       padding-right: 1rem;
       padding-top: 10%;
        
@@ -228,10 +220,7 @@ main h2{
     cursor: pointer;
 }
 
- 
-   /* footer ul{ */
-       /* list-style-type: ; */
-   /* } */
+
  
     footer a{
      color:  #FBFCFE;
@@ -374,9 +363,7 @@ nav ul li{
     height: 48px;
     width: 129px;
     left: 0px;
-    /* margin-left: 40%; */
     top: 0px;
-    /* text-align: ; */
     border-radius: 24px;
     
  }
